# enterprise-wasm

./: .gitignore  LOG.md  Makefile  README.md  aks-kubelet.txt  run-tests.sh
analysis/: 2024-01-21 order-ingress latency.md
aspire/: README.md  aspire.sln
aspire/aspire.AppHost/: Program.cs  aspire.AppHost.csproj
helpers/: clear-azsb-queues.sh  common.sh
helpers/orderdata-ts/: Makefile  README.md  package-lock.json  package.json  run-aks-spin-dapr.sh  run-aks-spin-dapr.yml  run-cluster.sh  run-cluster.yml  run-local-resources.sh  tsconfig.json
infra/aks-dotnet-dapr/: main.tf  namespaces.yaml  open-telemetry-collector-appinsights.yaml  outputs.tf  prepare-cluster.ps1  provider.tf  runtimeclass.yaml  variables.tf
infra/aks-kn-dapr/: Makefile  README.md  kn-configmap.properties  main.tf  open-telemetry-collector-appinsights.yaml  outputs.tf  prepare-cluster.sh  provider.tf  runtimeclass.yaml  variables.tf
infra/aks-spin-dapr/: Makefile  README.md  asmp  kube-proxy.json  main.tf  outputs.tf  prepare-cluster.sh  preprare-aks.sh  preprare-cluster.sh  provider.tf  remove-compute.sh  runtimeclass.yaml  (+2 more)
media/: EnterpriseWasm.drawio  enterprise-wasm.drawio
samples/spin-dapr-rs/: .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  dapr-components.yml  dapr-multi-run.yml  deploy.sh  destroy.sh  run-local-resources.sh  run.sh  spin.toml  test-binding.sh  test-cluster.sh  test-local-binding.sh  test-spin-dapr-aks.sh  workload-aks-ambient.yml  workload-aks-kn-shared-deploy.yml  workload-aks-shared-operator.yml  workload-aks-shared.yml  workload-aks-sidecar.yml  workload-aks-spin-shared-operator.yml
samples/spin-dapr-rs/components/: order-express.yaml  order-ingress.yaml  order-standard.yaml
samples/spin-dapr-rs/components-distributor/: config.yaml  order-standard.yaml
samples/spin-dapr-rs/components-merged/: standard-outbox.yaml
samples/spin-dapr-rs/components-receiver-standard/: order-standard.yaml  standard-outbox.yaml
samples/spin-dapr-rs/src/: lib.rs
samples/warp-dapr-rs/: .gitignore  :w  Cargo.toml  Dockerfile  Dockerfile.bak  Dockerfile.static  Makefile  build.sh  dapr-components.yml  dapr-multi-run.yml  deploy.sh  destroy.sh  test-warp-dapr-aks.sh  workload-aks-shared.yml  workload-aks-sidecar.yml
samples/warp-dapr-rs/src/: dapr_endpoints.rs  main.rs  models.rs
samples/warpwasi-dapr-rs/: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  build.sh  dapr-components.yml  dapr-multi-run.yml  deploy.sh  destroy.sh  run-local-resources.sh  service.yaml  test-cluster.sh  test-local-binding.sh  workload-aks-kn-shared-deploy.yml  workload-aks-kn-shared.yml
samples/warpwasi-dapr-rs/components-distributor/: order-express.yaml  order-ingress.yaml
samples/warpwasi-dapr-rs/components-receiver-express/: order-express.yaml
samples/warpwasi-dapr-rs/src/: dapr_endpoints.rs  errors.rs  main.rs
(+158 files in other folders)
