[package]
name = "spin-dapr-rs"
authors = ["Kai Walter <kai.walter@outlook.de>"]
description = ""
version = "0.1.0"
edition = "2021"

[lib]
crate-type = [ "cdylib" ]

[dependencies]
anyhow = "1"
http = "0.2"
json = "0.12.4"
serde = { version = "1.0.194", features = ["derive"] }
serde_json = "1.0.111"
spin-sdk = { git = "https://github.com/fermyon/spin", branch = "main" }
url = "*"

[workspace]
