[package]
name = "warp-dapr-rs"
version = "0.1.0"
edition = "2021"

[dependencies]
openssl = { version = "0.10.63", features = ["vendored"] }
reqwest = { version = "0.11.24", features = ["json"] }
serde = { version = "1.0.196", features = ["derive"] }
serde_json = "1.0.113"
tokio = { version = "1.35.1", features = ["full"] }
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
url = "2.5.0"
warp = "0.3.6"
