[package]
name = "warp-dapr-rs"
version = "0.2.0"
edition = "2021"

[dependencies]
http-api-problem = { version = "0.58.0", features = ["warp"] }
openssl = { version = "0.10", features = ["vendored"] }
reqwest = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "1.36", features = ["full"] }
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
warp = "0.3"
