[package]
name = "warpwasi_dapr_rs"
version = "0.1.0"
edition = "2021"

[dependencies]
http-api-problem = { version = "0.58.0" }
bytes = "1"
reqwest_wasi = { version = "0.11", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio_wasi = { version = "1", features = ["rt", "macros", "net", "time", "io-util"]}
tracing = "0.1"
tracing-subscriber = "0.3"
url = "2.5"
warp_wasi = "0.3"
